@@ -39,6 +39,7 @@ GF 5189	Can't specify SSLSocketFactory for STARTTLS in Javamail 1.4
 <no id>	ignore errors from SMTP RSET command
 <no id>	InternetAddress - detect more errors when strict, accept more when not
 <no id>	add mail.<protocol>.socketFactory and .SSLSocketFactory properties
+<no id>	add mail.mime.parameters.strict property to control ParameterList parse
 
 
 		  CHANGES IN THE 1.4.1 RELEASE
